--- a/webRTC/websocket/src/main/resources/static/index.html
+++ b/webRTC/websocket/src/main/resources/static/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <title>Spring Boot WebSocket Chat Application</title>
+    <link rel="stylesheet" href="/css/main.css" />
 </head>
 <body>
 
 <div id="username-page">
     <div class="username-page-container">
+        <h1>테스트입니다</h1>
         <h1 class="title">username을 입력하세요</h1>
         <form id="usernameForm" name="usernameForm">
             <div class="form-group">
