--- a/webRTC/rtc_test_test/src/main/resources/static/index.html
+++ b/webRTC/rtc_test_test/src/main/resources/static/index.html
@@ -13,6 +13,7 @@
         <form id="usernameForm" name="usernameForm">
             <div class="form-group">
                 <input type="text" id="name" placeholder="Username" autocomplete="off" class="form-control" />
+                <input type="text" id="room">
             </div>
             <div class="form-group">
                 <button type="submit" class="accent username-submit">채팅 시작하기</button>
