--- a/webRTC/rtc_test_test/src/main/resources/static/index.html
+++ b/webRTC/rtc_test_test/src/main/resources/static/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <title>document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 <body>
 
@@ -21,38 +22,55 @@
         </form>
     </div>
 </div>
-
-<div id="chat-page" class="hidden">
-    <div class="chat-container">
-        <div class="connecting">
-            연결중...
-        </div>
-        <ul id="messageArea">
-        </ul>
-        <form id="messageForm" name="messageForm">
-            <div class="form-group">
-                <div class="input-group clearfix">
-                    <input type="text" id="message" placeholder="Type a message..." autocomplete="off" class="form-control"/>
-                    <button type="submit" class="primary">보내기</button>
+<div style="margin-left : 3px; margin-right : 3px;">
+    <div class="row">
+        <div class="col-8">
+            <div class="row justify-content-center mx-3">
+                <video id="videoOutput" autoplay class="col-8 my-3" style="display : inline"
+                ></video>
+                <video id="videoInput" autoplay class="col-8 my-3" style="display : inline" muted="true"
+                ></video>
+            </div>
+            <div class="row" id="userScript" style="display : none">
+                <p>Who is your favorite actor or actress?
+                    Describe a particular story about something this person did which you heard about in the news.
+                    Begin with some details about the actor or actress and then describe all the details of what occurred,
+                    in particular, tell me about thethings that made this experience so memorable to people who like movies.</p>
+            </div>
+            <div>
+                <div>
+                    <button id="script">Script ON</button>
                 </div>
-            </div>
-        </form>
-        <div class="col-md-7">
-            <div id="videoBig">
-                <video id="videoOutput" autoplay width="640px" height="480px"
-                       ></video>
-            </div>
-            <div id="videoSmall">
-                <video id="videoInput" autoplay width="640px" height="480px" muted="true"
-                       ></video>
+                <button id="sound">음소거</button>
+                <button id="screen">비디오 중지</button>
             </div>
         </div>
-        <button id="sound">음소거</button>
-        <button id="screen">비디오 중지</button>
+
+        <div id="chat-page" class="hidden col-4">
+            <div class="chat-container">
+                <div class="connecting">
+                </div>
+                <ul id="messageArea">
+                </ul>
+                <form id="messageForm" name="messageForm">
+                    <div class="form-group">
+                        <div class="input-group clearfix">
+                            <input type="text" id="message" placeholder="Type a message..." autocomplete="off" class="form-control"/>
+                            <button type="submit" class="primary">보내기</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
 </div>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.4.0/sockjs.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
 <script src="/js/main.js"></script>
+<script>
+    scriptButton.addEventListener('click',function(){
+
+</script>
 </body>
 </html>
